# forrest

./: .codespellrc  .gitignore  Cargo.toml  README.md
.github/workflows/: check.yaml
contrib/seeds/arch/: README.md
contrib/seeds/debian/: README.md
contrib/seeds/debian/cloud-init/: user-data
contrib/seeds/debian/job-config/: job.sh
contrib/systemd/: forrest.service
docs/: config.md  jobs.md  nginx.md
src/: artifacts.rs  auth.rs  config.rs  execute.rs  ingres.rs  machines.rs  main.rs
src/config/: github.rs  host.rs  machine.rs  size_in_bytes.rs
src/execute/: job.rs  scheduler.rs
src/execute/job/: cloud_init.rs  config_fs.rs  scripts.rs
src/ingres/: auth.rs  poll.rs  webhook.rs
src/jobs/: job.rs  manager.rs
src/machines/: config_fs.rs  machine.rs  manager.rs  qemu.rs  run_dir.rs  triplet.rs
