[package]
name = "forrest"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
fatfs = "0.3"
hex = "0.4"
hmac = "0.12"
jsonwebtoken = "9.3"
log = "0.4"
octocrab = "0.38"
pretty_env_logger = "0.5"
rand = "0.8"
reflink-copy = "0.1"
sd-notify = "0.4"
serde = "1.0"
serde_yml = "0.0.10"
sha2 = "0.10"

[dependencies.tokio]
version = "1.38"
features = ["io-util", "process", "rt", "macros", "rt-multi-thread"]
